--- a/ScorePortal/ScorePortal/ScorePortal.csproj
+++ b/ScorePortal/ScorePortal/ScorePortal.csproj
@@ -11,11 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="CardsView" Version="2.4.0" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.9.1" />
     <PackageReference Include="LiveXAML" Version="2.1.73" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Plugin.Toast" Version="2.1.2" />
     <PackageReference Include="RestSharp" Version="106.6.10" />
     <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="17.4.0.40" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.7.0" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
