--- a/ScorePortal/ScorePortal/ScorePortal.csproj
+++ b/ScorePortal/ScorePortal/ScorePortal.csproj
@@ -77,6 +77,9 @@
     <EmbeddedResource Update="Views\MatchDetails.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Test.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\TournamentCategory.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
